node matrix display technology (#28)
* ASPNETCORE_ENVIRONMENT fix name

* nodes matrix readme update

* node matrix display technology
